--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
 1. [✔] HTML 레이아웃 만들기
-2. [] PHP 동적 레이아웃 만들기
+2. [✔] PHP 동적 레이아웃 만들기
 3. [✔] DB 생성 
 4. [✔] DB 연동
 5. [✔] DB 데이터 가져오기
-6. [] 라우터 만들기
+6. [✔] 라우터 만들기
 
 [✔, ❌]
